1.4
- make sync more responsive
- add ownCloud News support

1.2:
- add ability to share articles
	- share to readability
	- share to instapaper
	- share to pocket
- improve article-view
- updated UI and animations
- global shortcuts
- article grabber: grabs full articles without ads from website for known sites
- option to use readability instead of article grabber (hidden feature)
- drag article with middle mouse click
- tag and untag articles
- support feeds without category (feedly)
- support feeds with multiple categories (feedly)
- support for themes other than elementary
- basic full text search



1.0:
- Initial Release